# neoscaffold

./: .cursorrules  .gitignore  CONTRIBUTING.md  FAQ.md  README.md
neoscaffold/: .dockerignore  (+12 more)
server/: .dockerignore  .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  build_and_run.sh  docker_build.sh  main.py  pyproject.toml
server/custom_extensions/: README.md
server/custom_extensions/agents/: README.md  extension.py  requirements.txt  test.py  web.js
server/custom_extensions/core/: extension.py  requirements.txt  web.js
server/custom_extensions/core/tests/: test_memory.py
server/custom_extensions/llm/: extension.py  requirements.txt
server/custom_extensions/requests/: extension.py  web.js
server/custom_extensions/torch_train_nano_gpt_2/: extension.py  requirements.txt
server/example_worflows/: 01_string_basic.json
server/example_workflows/: neoscaffold_gpt2_torch.json
server/server/: __init__.py
server/server/domain/decorators/: time_duration.py
server/server/domain/enums/: runtime_action.py  severity_level.py
server/server/domain/models/: evaluation_action.py  node.py  node_input.py  node_input_group.py  node_output.py
server/server/domain/services/: graph_executor.py
server/server/domain/utilities/: authorize_user_and_get_info.py  fallback_json_encoder.py  generate_id.py  get_nested.py  make_stack_trace_dict.py  request_generator.py  resolve_property_path.py  run_callback.py  verify_google_token.py
server/tests/: conftest.py  test_evaluator.py
server/tests/unit/: test_rule.py  test_tgi_request.py
(+129 files in other folders)
